# Tiva-C-template

./: .gitignore  CMakeLists.txt  run.sh  startup.c  tm4c123g.cmake  tm4c123g.ld
src/: led.c  main.c
